--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ language: go
 jobs:
   include:
    - arch: amd64
-     env: CPU=k8
-   - arch: arm64
-     env: CPU=aarch64
+     env: CPU=k8 PROJECT_ID=${DOCKER_REGISTRY} COMMIT_SHA=ffffff 
+#   - arch: arm64
+#     env: CPU=aarch64
 
 install:
   - export PATH=$PATH:$HOME/bin && mkdir -p $HOME/bin
@@ -15,16 +15,18 @@ install:
   # install bazelisk as bazel to install the appropriate bazel version
   - wget https://github.com/bazelbuild/bazelisk/releases/download/v1.6.1/bazelisk-linux-${GOARCH} && chmod +x bazelisk-linux-${GOARCH} && mv bazelisk-linux-${GOARCH} $HOME/bin/bazel
 
+before_script:
+  - sudo echo "${IP} ${DOCKER_REGISTRY}" >> /etc/hosts
+  - sudo mkdir -p /etc/docker/certs.d/${DOCKER_REGISTRY}
+  - sudo cp ./certs/registry.crt /etc/docker/certs.d/${DOCKER_REGISTRY}/ 
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin "$DOCKER_REGISTRY"
+
 script:
   - bazel clean --curses=no
   - bazel build --cpu=${CPU} --curses=no //package_manager:dpkg_parser.par
   - bazel build --cpu=${CPU} --curses=no //...
-  # Build all targets tagged with our architecture:
-  - bazel build --cpu=${CPU} --curses=no $(bazel query 'attr("tags", "'${GOARCH}'", "//...")')
-  # Run all tests not tagged as "manual":
-  - bazel test  --cpu=${CPU} --curses=no --test_output=errors --test_timeout=900 //...
-  # Run all tests tagged with our architecture:
-  - bazel test  --cpu=${CPU} --curses=no --test_output=errors --test_timeout=900 $(bazel query 'attr("tags", "'${GOARCH}'", "//...")')
+  - bazel run //:publish
+
 
 notifications:
   email: false
