--- a/experimental/busybox/BUILD
+++ b/experimental/busybox/BUILD
@@ -10,7 +10,7 @@ load(":commands.bzl", "BUSYBOX_COMMANDS")
     outs = ["busybox_" + arch + ".tar"],
     cmd = "mkdir busybox; cp $(<) busybox/busybox; cd busybox; \
            if [[ $(<) == *ppc64le* ]]; then \
-	     ar -x busybox data.tar.xz; rm -f busybox; tar -xf data.tar.xz ./bin/busybox; mv ./bin/busybox .; rm -rf ./bin data.tar.xz; \
+	     tar -xf busybox ./bin && mv -f ./bin/busybox . && rm -rf ./bin; \
 	   fi; \
            for cmd in %s; do \
              ln -s busybox $$cmd; \
